--- a/kata/pom.xml
+++ b/kata/pom.xml
@@ -3,4 +3,23 @@
   <groupId>poker_kata2</groupId>
   <artifactId>kata</artifactId>
   <version>0.0.1-SNAPSHOT</version>
+  <plugin>
+    <groupId>org.jacoco</groupId>
+    <artifactId>jacoco-maven-plugin</artifactId>
+    <version>0.7.7.201606060606</version>
+    <executions>
+        <execution>
+            <goals>
+                <goal>prepare-agent</goal>
+            </goals>
+        </execution>
+        <execution>
+            <id>report</id>
+            <phase>prepare-package</phase>
+            <goals>
+                <goal>report</goal>
+            </goals>
+        </execution>
+    </executions>
+</plugin>
 </project>
