--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -17,3 +17,4 @@ steps:
     publishJUnitResults: true
     testResultsFiles: '**/TEST-*.xml'
     goals: 'package'
+    codeCoverageToolOption: JaCoCo
