--- a/kata/pom.xml
+++ b/kata/pom.xml
@@ -3,7 +3,8 @@
   <groupId>poker_kata2</groupId>
   <artifactId>kata</artifactId>
   <version>0.0.1-SNAPSHOT</version>
-  <plugin>
+  <plugins>
+<plugin>
     <groupId>org.jacoco</groupId>
     <artifactId>jacoco-maven-plugin</artifactId>
     <version>0.7.7.201606060606</version>
@@ -22,4 +23,6 @@
         </execution>
     </executions>
 </plugin>
+</plugins>
+</build>
 </project>
